<resources>
    <string name="app_name">GameTest</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_achievement">Achievement</string>
    <string name="title_activity_autotest">AutoTest</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_statics">Statics</string>
    <string name="title_activity_game_save">GameSave</string>
    <string name="title_activity_achievement_list">AchievementListActivity</string>
    <string name="title_activity_gamesummary">GameSummary</string>
    <string name="title_activity_playerstats">PlayerStats</string>
    <string name="report_immediate">reportImmediate</string>
    <string name="unlock">Unlock</string>
    <string name="reveal">Reveal</string>
    <string name="increment_steps">IncrementSteps</string>
    <string name="set_steps">SetSteps</string>
    <string name="detail">AchievementDetail</string>
    <string name="my_achievement">MyAchievement</string>
    <string name="api_name">Api</string>
    <string name="api_params">ApiParams</string>
    <string name="ok">OK</string>
    <string name="init">Init</string>
    <string name="sign_in">SignIn</string>
    <string name="login">Login</string>
    <string name="get_current_player">GetCurrentPlayer</string>
    <string name="is_real_time">IsRealTime</string>
    <string name="get_current_player_stats">GetCurrentPlayerStats</string>
    <string name="get_cache_player_id">GetCachePlayerId</string>
    <string name="save_player">SavePlayerInfo</string>
    <string name="getAchievementIntent">AchievementIntent</string>
    <string name="load_achievement">LoadAchievement</string>
    <string name="load_achievement_off">LoadAchievementOff</string>
    <string name="check_update">CheckUpdate</string>
    <string name="pop_update_dialog">PopUpdateDialog</string>
    <string name="iap">IAP</string>
    <string name="pay_amount">Payment amount</string>
    <string name="get_certificate_info">GetCertificateInfo</string>
    <string name="get_certificate_intent">GetCertificateIntent</string>
    <string name="register_game">RegisterGame</string>
    <string name="get_phone_info">GetPhoneInfo</string>
    <string name="get_miss_product_list">GetMissProductInfo</string>
    <string name="content_hide_events_by_ids">loadByIds, split with ","</string>
    <string name="load_event">LoadEvent</string>
    <string name="load_event_off">LoadEventOffLine</string>
    <string name="load_event_by_id">LoadEventById</string>
    <string name="load_event_by_id_off">LoadEventOffLineById</string>
    <string name="increment_event">IncrementEvent</string>
    <string name="auto_test">AutoTest</string>
    <string name="ranking_get_all_ranking">getAllRankingsIntent</string>
    <string name="ranking_get_status">getRankingsSwitchStatus</string>
    <string name="ranking_set_status">setRankingsSwitchStatus</string>
    <string name="get_local_gamesummary">GetLocalGameSummary</string>
    <string name="get_gamesummary">GetGameSummary</string>
    <string name="archive_open">open</string>
    <string name="archive_delete">delete</string>
    <string name="archive_update">update</string>
    <string name="archive_add">add</string>
    <string name="archive_load">load</string>
    <string name="archive_load_cache">loadCache</string>
    <string name="archive_select_intent">LaunchAppAssistant</string>
    <string name="conflict_policy">ConflictPolicy</string>
    <string name="metadata_description">Description:</string>
    <string name="metadata_progress">Progress: </string>
    <string name="metadata_playedTime">PlayedTime:</string>
    <string name="archive_list">Archives</string>
    <string name="archive_get_max_image_size">getMaxImageSize</string>
    <string name="archive_get_max_file_size">getMaxFileSize</string>

    <string name="game_begin">GameBegin</string>
    <string name="game_end">GameEnd</string>
    <string name="play_extra">PlayExtra</string>

</resources>
