<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_backgroud"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_color"
            android:minWidth="60dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_main"/>
        <Button
            android:id="@+id/btn_achievement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_color"
            android:minWidth="60dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_achievement"/>
        <Button
            android:id="@+id/btn_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_color"
            android:minWidth="60dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_event" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_ranking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_color"
            android:minWidth="60dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_ranking"/>
        <Button
            android:id="@+id/btn_game_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_color"
            android:minWidth="60dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_game_save"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_color"
            android:minWidth="60dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_statics" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_GameSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_color"
            android:minWidth="60dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_gamesummary"/>

        <Button
            android:id="@+id/btn_PlayerStat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_color"
            android:minWidth="60dp"
            android:textAllCaps="false"
            android:text="@string/title_activity_playerstats" />
    </LinearLayout>>

</LinearLayout>
