<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_head" />

    <Button
        android:id="@+id/btn_get_achieve_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/getAchievementIntent"/>

    <Button
        android:id="@+id/btn_load_achievement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/load_achievement"/>

    <Button
        android:id="@+id/btn_load_achievement_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/load_achievement_off"/>

    <include layout="@layout/layout_bottom" />

</LinearLayout>