<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/achievement_image"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/achievement_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/cbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:checked="true"
                    android:text="@string/report_immediate"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/achievement_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:lines="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">

                <TextView
                    android:id="@+id/achievement_unlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/shape_btn_corner"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/unlock"/>

                <TextView
                    android:id="@+id/achievement_reveal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/shape_btn_corner"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/reveal"/>

                <TextView
                    android:id="@+id/achievement_increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/shape_btn_corner"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/increment_steps"/>

                <TextView
                    android:id="@+id/achievement_setstep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/shape_btn_corner"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/set_steps"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cardview_dark_background"
        />
</LinearLayout>